// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be structurally sound when active 1`] = `
<vm-fullscreen-control class="hidden">
  <vm-control hidden="" keys="f" label="Fullscreen" pressed="">
    <vm-icon href="#vime-exit-fullscreen"></vm-icon>
    <vm-tooltip position="top">
      Exit fullscreen (f)
    </vm-tooltip>
  </vm-control>
</vm-fullscreen-control>
`;

exports[`should be structurally sound when not active 1`] = `
<vm-fullscreen-control class="hidden">
  <vm-control hidden="" keys="f" label="Fullscreen">
    <vm-icon href="#vime-enter-fullscreen"></vm-icon>
    <vm-tooltip position="top">
      Enter fullscreen (f)
    </vm-tooltip>
  </vm-control>
</vm-fullscreen-control>
`;
